--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,17 @@
   </dependencies>
     <build>
         <plugins>
-            <plugin>
+      <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.22.0</version>
+    <configuration>
+    <parallel>methods</parallel>
+    <threadCount>3</threadCount>
+    <perCoreThreadCount>false</perCoreThreadCount>
+</configuration>
+</plugin>
+   <!--         <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
@@ -101,7 +111,7 @@
 						<include>**/*Runner.java</include>
 					</includes>
                 </configuration>
-            </plugin>
+            </plugin> -->
             <plugin>
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
